# mealie-mcp

./: CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: live-test-reviewer.md  repo-conventions-reviewer.md  tool-pattern-reviewer.md
.claude/commands/: review-pr.md
.claude/rules/: live-tests.md  tools.md
.github/actions/mealie-token/: action.yml
.github/workflows/: ci.yml  claude-agent-run.yml  claude-doc-sync.yml  claude-implement.yml  claude-issue-triage.yml  claude-on-demand.yml  claude-pr-review.yml  claude-task-with-mealie.yml  security-scan.yml
scripts/: README.md  mealie-up  resolve-spec-tag
src/mealie_mcp/: server.py
src/mealie_mcp/client/: __init__.py  client.py
src/mealie_mcp/client/api/admin_about/: check_app_config_api_admin_about_check_get.py  get_app_info_api_admin_about_get.py  get_app_statistics_api_admin_about_statistics_get.py
src/mealie_mcp/client/api/admin_ai_providers/: create_ai_provider_api_admin_groups_group_id_ai_providers_providers_post.py  delete_ai_provider_api_admin_groups_group_id_ai_providers_providers_provider_id_delete.py  get_ai_provider_api_admin_groups_group_id_ai_providers_providers_provider_id_get.py  update_ai_provider_api_admin_groups_group_id_ai_providers_providers_provider_id_put.py
src/mealie_mcp/client/api/admin_backups/: create_one_api_admin_backups_post.py  delete_one_api_admin_backups_file_name_delete.py  get_all_api_admin_backups_get.py  get_one_api_admin_backups_file_name_get.py  import_one_api_admin_backups_file_name_restore_post.py  upload_one_api_admin_backups_upload_post.py
src/mealie_mcp/client/models/: __init__.py  admin_about_info.py  ai_provider_create.py  ai_provider_create_requestheaders.py  ai_provider_create_requestparams.py  ai_provider_out.py  ai_provider_out_requestheaders.py  ai_provider_out_requestparams.py  ai_provider_settings_out.py  ai_provider_settings_update.py  ai_provider_summary.py  ai_provider_update.py  ai_provider_update_requestheaders.py  ai_provider_update_requestparams.py  all_backups.py  app_info.py  app_startup_info.py  app_statistics.py  app_theme.py  assign_categories.py  assign_settings.py  assign_tags.py  auth_method.py  backup_file.py  body_create_recipe_from_image_api_recipes_create_image_post.py  body_create_recipe_from_zip_api_recipes_create_zip_post.py  body_debug_openai_api_admin_debug_openai_provider_id_post.py  body_get_token_api_auth_token_post.py  body_start_data_migration_api_groups_migrations_post.py  body_trigger_action_api_households_recipe_actions_item_id_trigger_recipe_slug_post.py  body_update_event_image_api_recipes_timeline_events_item_id_image_put.py  body_update_recipe_image_api_recipes_slug_image_put.py  body_update_user_image_api_users_id_image_post.py  body_upload_one_api_admin_backups_upload_post.py  body_upload_recipe_asset_api_recipes_slug_assets_post.py  category_base.py  category_in.py  category_out.py  category_summary.py  change_password.py  (+174 more)
src/mealie_mcp/tools/: __init__.py  _common.py  households_mealplans.py  households_shopping_list_items.py  households_shopping_lists.py  organizer_categories.py  organizer_tags.py  organizer_tools.py  recipe_comments.py  recipe_crud.py  recipes_foods.py  recipes_units.py
tests/live/: conftest.py  test_households_mealplans.py  test_households_shopping_list_items.py  test_households_shopping_lists.py  test_organizer_categories.py  test_organizer_tags.py  test_organizer_tools.py  test_recipe_comments.py  test_recipe_crud.py  test_recipes_foods.py  test_recipes_units.py
tests/unit/: test_common.py  test_households_mealplans.py  test_households_shopping_list_items.py  test_households_shopping_lists.py  test_organizer_categories.py  test_organizer_tags.py  test_organizer_tools.py  test_recipe_comments.py  test_recipe_crud.py  test_recipes_foods.py  test_recipes_units.py  test_server.py
(+231 files in other folders)
