[project]
name = "mealie-mcp"
version = "0.0.1"
description = "MCP server that wraps the Mealie REST API."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Alexander Wenzel" }]
dependencies = [
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
]

[project.scripts]
mealie-mcp = "mealie_mcp.server:main"
regen-client = "mealie_mcp._scripts.regen_client:main"

[tool.mealie-mcp.spec]
version = "v3.19.2"
sha256 = "810fa4db9975404f8079619e49d88a8229a658b30b533f5c9e299dc31261d9bd"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mealie_mcp"]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pre-commit>=4.6.0",
    "bandit>=1.9.4",
    "pip-audit>=2.10.1",
    "openapi-python-client>=0.29.0",
    "pytest-cov>=7.1.0",
]

[tool.uv.sources]
# Temporary pin to a fork carrying two unmerged generator fixes
# (openapi-generators/openapi-python-client#1448 and #1449). Drop this
# block and bump the floor in [dependency-groups].dev once a release
# containing both lands on PyPI.
openapi-python-client = { git = "https://github.com/alexander-wenzel-dev/openapi-python-client", branch = "pin/mealie-mcp-combined" }

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = ["src/mealie_mcp/client"]

[tool.ruff.lint]
select = [
    "E", "W",     # pycodestyle
    "F",          # pyflakes
    "I",          # isort
    "N",          # pep8-naming
    "UP",         # pyupgrade
    "B",          # flake8-bugbear
    "A",          # flake8-builtins
    "C4",         # flake8-comprehensions
    "DTZ",        # flake8-datetimez
    "T20",        # flake8-print
    "PT",         # flake8-pytest-style
    "SIM",        # flake8-simplify
    "PTH",        # flake8-use-pathlib
    "ERA",        # eradicate (commented-out code)
    "PL",         # pylint
    "TRY",        # tryceratops
    "RUF",        # ruff-specific
    "S",          # flake8-bandit
    "TID",        # flake8-tidy-imports
    "LOG",        # flake8-logging
    "G",          # flake8-logging-format
    "RET",        # flake8-return
    "ARG",        # flake8-unused-arguments
    "INP",        # flake8-no-pep420 (no implicit namespace packages)
    "ASYNC",      # flake8-async (blocking calls in async funcs)
    "FURB",       # refurb (modernization suggestions)
]
ignore = [
    "TRY003",   # avoid long messages outside exception class (noisy)
    "PLR0913",  # too many arguments (FastMCP tools often have many)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "PLR2004", "INP001"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src"]
exclude = ["src/mealie_mcp/client/"]
warn_unreachable = true
enable_error_code = [
    "redundant-expr",
    "truthy-bool",
    "ignore-without-code",
    "unused-awaitable",
    "possibly-undefined",
]

[[tool.mypy.overrides]]
module = "mealie_mcp.client.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config -m 'not live' --cov"
xfail_strict = true
markers = [
    "live: tests that hit a real Mealie instance (require .env)",
]

[tool.bandit]
exclude_dirs = ["tests", "src/mealie_mcp/client"]

[tool.coverage.run]
source = ["src/mealie_mcp"]
branch = true
omit = ["src/mealie_mcp/client/*", "src/mealie_mcp/_scripts/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.commitizen]
name = "cz_conventional_commits"
